[metadata]
name = neatmesh
version = 0.0.5
author = Mohamed Emara
author_email = mae.emara@gmail.com
description = Finite Volume/Element Mesh Quality Inspector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eigenemara/neatmesh
project_urls =
    Bug Tracker = https://github.com/eigenemara/neatmesh/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    mesh
    scientific
    engineering
    fvm
    fem
    finite volume
    finite element

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    rich
    meshio
    humanize
    toml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    neatmesh = neatmesh._cli:main